--- a/vite-project/.github/workflows/deploy.yml
+++ b/vite-project/.github/workflows/deploy.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.GCP_SSH_PRIVATE_KEY }}
 
+      - name: Test SSH connection
+        run: |
+          ssh -v -o StrictHostKeyChecking=no sabyasachigolu@34.47.223.176 "echo 'SSH is working'"
+
       - name: Deploy to GCP VM
         run: |
           ssh -o StrictHostKeyChecking=no sabyasachigolu@34.47.223.176 << 'EOF'
