--- a/vite-project/.github/workflows/deploy.yml
+++ b/vite-project/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
----
 name: Deploy to GCP VM
 
 on:
@@ -15,23 +14,17 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
+      - name: Setup GCP VM Access
+        uses: appleboy/ssh-action@v1.0.0
         with:
-          ssh-private-key: ${{ secrets.GCP_SSH_PRIVATE_KEY }}
-
-      - name: Test SSH connection
-        run: |
-          ssh -v -o StrictHostKeyChecking=no \
-            sabyasachigolu@34.47.223.176 "echo 'SSH is working'"
-
-      - name: Deploy to GCP VM
-        run: |
-          ssh -o StrictHostKeyChecking=no \
-            sabyasachigolu@34.47.223.176 << 'EOF'
+          host: 34.47.223.176
+          username: sabyasachigolu
+          key: ${{ secrets.GCP_SSH_PRIVATE_KEY }}
+          script: |
             cd ~/Test/vite-project
+            git config --global credential.helper store
+            echo "https://oauth2:${{ secrets.GITHUB_TOKEN }}@github.com" > ~/.git-credentials
             git pull origin main
             npm install
             npm run build
             sudo systemctl restart nginx
-          EOF
